[CRD iOS] Feed logger immediately with access token

Previously we don't feed the logger with access token until the logger
fails to send a log due to denied permissions, which will pollute our
error rate statistics.

This CL makes the app set the logger's access token immediately after the
user logs in or switches account.

Bug: 750366
Change-Id: I6898efd73339b2207d954422bcf2410eb0efa4f5
Reviewed-on: https://chromium-review.googlesource.com/591510
Reviewed-by: Scott Nichols <nicholss@chromium.org>
Commit-Queue: Yuwei Huang <yuweih@chromium.org>
Cr-Commit-Position: refs/heads/master@{#490788}
Former-commit-id: 7c009a74388dd45218c73c149579b5bf48b64a44