remoting/ios/facade/ios_client_runtime_delegate.mm
@@ -39,6 +39,8 @@ void IosClientRuntimeDelegate::RuntimeDidShutdown() {
 
 void IosClientRuntimeDelegate::RequestAuthTokenForLogger() {
   if (!runtime_->ui_task_runner()->BelongsToCurrentThread()) {
+    // TODO(yuweih): base::Unretained(this) looks suspicious here. Maybe we can
+    // use GetWeakPtr()?
     runtime_->ui_task_runner()->PostTask(
         FROM_HERE,
         base::Bind(&IosClientRuntimeDelegate::RequestAuthTokenForLogger,
@@ -51,17 +53,35 @@ void IosClientRuntimeDelegate::RequestAuthTokenForLogger() {
                                   NSString* userEmail, NSString* accessToken) {
           if (status == RemotingAuthenticationStatusSuccess) {
             // Set the new auth token for the log writer on the network thread.
-            std::string access_token = base::SysNSStringToUTF8(accessToken);
-            runtime_->network_task_runner()->PostTask(
-                FROM_HERE, base::BindBlockArc(^{
-                  runtime_->log_writer()->SetAuthToken(access_token);
-                }));
+            SetAuthToken(base::SysNSStringToUTF8(accessToken));
           } else {
             LOG(ERROR) << "Failed to fetch access token for log writer. ("
                        << status << ")";
           }
         }];
   }
+}
+
+void IosClientRuntimeDelegate::SetAuthToken(const std::string& access_token) {
+  if (runtime_->network_task_runner()->BelongsToCurrentThread()) {
+    runtime_->log_writer()->SetAuthToken(access_token);
+    return;
+  }
+
+  runtime_->network_task_runner()->PostTask(
+      FROM_HERE,
+      base::Bind(
+          base::BindBlockArc(^(const std::string& token) {
+            // |token| need to be bound separately since the Objective-C block
+            // captures the reference without copying.
+
+            // Using |runtime_| here will be unsafe since that will implicitly
+            // capture |this|, of which the lifetime is not managed by the
+            // block.
+            ChromotingClientRuntime::GetInstance()->log_writer()->SetAuthToken(
+                token);
+          }),
+          access_token));
 }
 
 base::WeakPtr<IosClientRuntimeDelegate> IosClientRuntimeDelegate::GetWeakPtr() {
