remoting/ios/facade/remoting_service.mm
@@ -151,6 +151,12 @@ NSString* const kUserInfo = @"kUserInfo";
   if (user) {
     userInfo = [NSDictionary dictionaryWithObject:user forKey:kUserInfo];
     [self requestHostListFetch];
+    [_authentication
+        callbackWithAccessToken:^(RemotingAuthenticationStatus status,
+                                  NSString* userEmail, NSString* accessToken) {
+          _clientRuntimeDelegate->SetAuthToken(
+              base::SysNSStringToUTF8(accessToken));
+        }];
   } else {
     _hosts = nil;
   }
